--- a/buzzle_novo-main/public/homeprof.html
+++ b/buzzle_novo-main/public/homeprof.html
@@ -54,7 +54,8 @@
                                 
                                 
                                 <button class="divatv">
-                                <h4 class="h4">atividade nuclear</h4>
+                                <class="deutudoerrado"><img src="imagens/deutudoerrado.wepb"> </class>
+                                    <h2 class="h2">atividade nuclear</h2>
                                 </button>
                                 <button class="divatv"></button>
                                 <button class="divatv"></button>
