--- a/public/homeprof.html
+++ b/public/homeprof.html
@@ -55,12 +55,35 @@
                                 
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                    
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
                             </section>
                         </section>
                         <button onclick="moveSlide(1)" id="butao">&#10095;</button>
@@ -72,12 +95,36 @@
                         <button onclick="moveSlide(-1)" id="butao">&#10094;</button>
                         <section id="seccarrossel">
                             <section id="secroladora">
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
-                                <button class="divatv"><h2 class="letra">atividade nuclear</h2></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
+                                <button class="divatv"><h2 class="letra">atividade nuclear</h2>
+                                    <h4 class="prof">Prof: Flávia</h4>
+                                    <h4 class="turma">8ºC</h4>
+                                <h6 class="prazo">Até 01/01/2026</h6>
+                                <h5 class="nota">30 pontos</h5></button>
                             </section>
                         </section>
                         <button onclick="moveSlide(1)" id="butao">&#10095;</button>
