--- a/public/homeprof.html
+++ b/public/homeprof.html
@@ -55,34 +55,34 @@
                                 
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
+                                    <h4 class="turma">9ºC</h4>
                                 <h6 class="prazo">Até 01/01/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                     
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">8ºA</h4>
+                                <h6 class="prazo">Até 08/01/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">6ºE</h4>
+                                <h6 class="prazo">Até 15/01/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">9ºC</h4>
+                                <h6 class="prazo">Até 22/01/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">6ºE</h4>
+                                <h6 class="prazo">Até 07/01/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">9ºC</h4>
+                                <h6 class="prazo">Até 20/12/2025</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                             </section>
                         </section>
@@ -97,33 +97,33 @@
                             <section id="secroladora">
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">6ºE</h4>
+                                <h6 class="prazo">Até 12/11/2025</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">8ºA<A></A></h4>
+                                <h6 class="prazo">Até 21/08/2025</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">9ºC</h4>
+                                <h6 class="prazo">Até 29/09/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">8ºA</h4>
+                                <h6 class="prazo">Até 11/11/2025</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">9ºC</h4>
+                                <h6 class="prazo">Até 15/09/2025</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                                 <button class="divatv"><h2 class="letra">atividade nuclear</h2>
                                     <h4 class="prof">Prof: Flávia</h4>
-                                    <h4 class="turma">8ºC</h4>
-                                <h6 class="prazo">Até 01/01/2026</h6>
+                                    <h4 class="turma">8ºA</h4>
+                                <h6 class="prazo">Até 31/10/2026</h6>
                                 <h5 class="nota">30 pontos</h5></button>
                             </section>
                         </section>
