--- a/public/cadturma.html
+++ b/public/cadturma.html
@@ -21,12 +21,27 @@
             </section>
         </header>
         <aside>
-
+            <section id="secnav">
+                <button class="navbut">
+                    Configurações
+                </button>
+                <button class="navbut">
+                    Início
+                </button>
+            </section>
+            <section id="secturmas">
+                <p id="astitulo">Turmas</p>
+                <section id="subsecturmas">
+                    <button class="divtur"><h2>9ºC</h2></button>
+                    <button class="divtur"><h2>8ºA</h2></button>
+                    <button class="divtur"><h2>6ºE</h2></button>
+                </section>
+            </section>
         </aside>
         <main>
             <section id="fundo">
                 <section id="secmain">
-                    <p></p>
+                    <p id="secmaintitle">Criar Turma</p>
                     <div id="divinput">
                         <div id="div1">
                             <input id="inputnome" placeholder="Nome">
