--- a/public/turma.html
+++ b/public/turma.html
@@ -40,8 +40,16 @@
         </aside>
         <main>
             <section id="fundo">
-                <p id="turmanome">Nome da turma</p>
-                <p id="turmadesc">descrição da turma descrição da turma descrição da turma descrição da turma</p>
+ <section id="secroladora">
+                                
+                                <button class="divatv"></button>
+                                <button class="divatv"></button>
+                                <button class="divatv"></button>
+                                <button class="divatv"></button>
+                                <button class="divatv"></button>
+                                <button class="divatv"></button>
+                            </section>
+                        </section>
             </section>
             <section id="secmain">
 
